--- a/index.html
+++ b/index.html
@@ -2,98 +2,55 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Thunder Tryouts - Create Account</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Thunder Tryouts</title>
+  <link rel="icon" href="favicon.ico" />
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      padding: 20px;
-      max-width: 400px;
-      margin: auto;
-    }
-    h2 {
+      background: #f4f4f4;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
       text-align: center;
     }
-    label {
-      display: block;
-      margin: 10px 0 5px;
+    .container {
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    input, select, button {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
+    h1 {
+      color: royalblue;
+      margin-bottom: 20px;
+    }
+    .btn {
+      display: inline-block;
+      padding: 12px 24px;
+      margin: 10px;
       font-size: 16px;
+      background-color: royalblue;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: background 0.3s;
     }
-    .message {
-      text-align: center;
-      font-weight: bold;
-      margin-top: 10px;
+    .btn:hover {
+      background-color: darkblue;
     }
   </style>
 </head>
 <body>
-  <h2>Create Account</h2>
-  <form id="signupForm">
-    <label for="email">Email</label>
-    <input type="email" id="email" required />
-
-    <label for="password">Password</label>
-    <input type="password" id="password" required />
-
-    <label for="name">Name</label>
-    <input type="text" id="name" required />
-
-    <label for="role">Role</label>
-    <select id="role">
-      <option value="Parent">Parent</option>
-      <option value="Coach">Coach</option>
-      <option value="Admin">Admin</option>
-    </select>
-
-    <button type="submit">Create Account</button>
-    <div class="message" id="message"></div>
-  </form>
-
-  <script>
-    document.getElementById("signupForm").addEventListener("submit", async (e) => {
-      e.preventDefault();
-
-      const message = document.getElementById("message");
-      message.textContent = "Creating account...";
-
-      const payload = {
-        email: document.getElementById("email").value,
-        password: document.getElementById("password").value,
-        name: document.getElementById("name").value,
-        role: document.getElementById("role").value,
-        signup: true
-      };
-
-      const endpoint = "https://corsproxy.io/?" + encodeURIComponent(
-        "https://script.google.com/macros/s/AKfycbxXMsysVU0HbN6NaVoX1sR8ynD-nfyCeEpZ12HJ9R2hvczXAJjPo3QOROHNv9cJ_pvAqg/exec"
-      );
-
-      try {
-        const res = await fetch(endpoint, {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify(payload)
-        });
-
-        const result = await res.json();
-        if (result.success) {
-          message.textContent = "Account created successfully!";
-        } else {
-          message.textContent = "Signup failed.";
-        }
-      } catch (err) {
-        message.textContent = "Signup error: " + err.message;
-        console.error(err);
-      }
-    });
-  </script>
+  <div class="container">
+    <h1>Thunder Tryouts</h1>
+    <p>Welcome! Please log in or create a new account to get started.</p>
+    <a class="btn" href="login.html">Login</a>
+    <a class="btn" href="signup.html">Create Account</a>
+  </div>
 </body>
 </html>
