--- a/signup.html
+++ b/signup.html
@@ -2,39 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Thunder Tryouts - Create Account</title>
-  <link rel="icon" href="favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Create Account - Thunder Tryouts</title>
   <style>
     body {
       font-family: Arial, sans-serif;
+      padding: 2rem;
       max-width: 400px;
-      margin: 40px auto;
-      padding: 20px;
-      background: #f7f7f7;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      margin: auto;
     }
+
     h2 {
       text-align: center;
     }
+
     label {
       display: block;
-      margin-top: 15px;
+      margin-top: 1rem;
     }
+
     input, select, button {
       width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
+      padding: 0.5rem;
+      margin-top: 0.5rem;
+      font-size: 1.1rem;
     }
-    button {
-      margin-top: 20px;
-      background: royalblue;
-      color: white;
+
+    .message {
+      margin-top: 1rem;
+      text-align: center;
       font-weight: bold;
-      cursor: pointer;
     }
   </style>
 </head>
@@ -42,16 +39,17 @@
   <h2>Create Account</h2>
   <form id="signupForm">
     <label>Email
-      <input type="email" name="email" required>
+      <input type="email" name="email" required />
     </label>
     <label>Password
-      <input type="password" name="password" required>
+      <input type="password" name="password" required />
     </label>
     <label>Name
-      <input type="text" name="name" required>
+      <input type="text" name="name" required />
     </label>
     <label>Role
       <select name="role" required>
+        <option value="">Select a role</option>
         <option value="Parent">Parent</option>
         <option value="Coach">Coach</option>
         <option value="Admin">Admin</option>
@@ -59,48 +57,42 @@
     </label>
     <button type="submit">Create Account</button>
   </form>
-  <p id="status"></p>
+  <div class="message" id="message"></div>
 
   <script>
-    const form = document.getElementById("signupForm");
-    const status = document.getElementById("status");
+    const form = document.getElementById('signupForm');
+    const messageDiv = document.getElementById('message');
 
-    const PROXY_URL = "https://corsproxy.io/?";
-    const GAS_URL = "https://script.google.com/macros/s/AKfycbxXMsysVU0HbN6NaVoX1sR8ynD-nfyCeEpZ12HJ9R2hvczXAJjPo3QOROHNv9cJ_pvAqg/exec";
-
-    form.addEventListener("submit", async (e) => {
+    form.addEventListener('submit', async (e) => {
       e.preventDefault();
-      status.textContent = "Creating account...";
+      messageDiv.textContent = 'Creating account...';
 
       const formData = new FormData(form);
-      const payload = {
-        signup: true,
-        email: formData.get("email"),
-        password: formData.get("password"),
-        name: formData.get("name"),
-        role: formData.get("role")
+      const data = {
+        email: formData.get('email'),
+        password: formData.get('password'),
+        name: formData.get('name'),
+        role: formData.get('role'),
+        signup: true
       };
 
       try {
-        const response = await fetch(PROXY_URL + GAS_URL, {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify(payload)
+        const response = await fetch('https://corsproxy.io/?https://script.google.com/macros/s/AKfycbxXMsysVU0HbN6NaVoX1sR8ynD-nfyCeEpZ12HJ9R2hvczXAJjPo3QOROHNv9cJ_pvAqg/exec', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(data)
         });
 
         const result = await response.json();
         if (result.success) {
-          status.textContent = "Account created! Redirecting...";
-          // Optionally redirect to login or dashboard
-          setTimeout(() => window.location.href = "login.html", 1500);
+          messageDiv.textContent = 'Signup successful! Redirecting...';
+          setTimeout(() => window.location.href = 'index.html', 1500);
         } else {
-          status.textContent = "Signup failed.";
+          messageDiv.textContent = 'Signup failed.';
         }
-      } catch (err) {
-        console.error("Signup error:", err);
-        status.textContent = "Signup error: " + err.message;
+      } catch (error) {
+        console.error(error);
+        messageDiv.textContent = 'Signup error: ' + error.message;
       }
     });
   </script>
