--- a/signup.html
+++ b/signup.html
@@ -3,35 +3,26 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Create Account - Thunder Tryouts</title>
+  <title>Create Account</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 2rem;
-      max-width: 400px;
-      margin: auto;
+      padding: 20px;
     }
-
-    h2 {
-      text-align: center;
-    }
-
     label {
       display: block;
-      margin-top: 1rem;
+      margin-top: 10px;
     }
-
-    input, select, button {
+    input, select {
       width: 100%;
-      padding: 0.5rem;
-      margin-top: 0.5rem;
-      font-size: 1.1rem;
+      padding: 8px;
+      margin-top: 5px;
     }
-
-    .message {
-      margin-top: 1rem;
-      text-align: center;
-      font-weight: bold;
+    button {
+      margin-top: 20px;
+      padding: 10px;
+      width: 100%;
+      font-size: 16px;
     }
   </style>
 </head>
@@ -49,7 +40,7 @@
     </label>
     <label>Role
       <select name="role" required>
-        <option value="">Select a role</option>
+        <option value="">Select Role</option>
         <option value="Parent">Parent</option>
         <option value="Coach">Coach</option>
         <option value="Admin">Admin</option>
@@ -57,42 +48,46 @@
     </label>
     <button type="submit">Create Account</button>
   </form>
-  <div class="message" id="message"></div>
+
+  <p id="status"></p>
 
   <script>
-    const form = document.getElementById('signupForm');
-    const messageDiv = document.getElementById('message');
+    const scriptURL = "https://script.google.com/macros/s/AKfycbxXMsysVU0HbN6NaVoX1sR8ynD-nfyCeEpZ12HJ9R2hvczXAJjPo3QOROHNv9cJ_pvAqg/exec"; // update to your deployed URL
 
-    form.addEventListener('submit', async (e) => {
+    document.getElementById("signupForm").addEventListener("submit", async (e) => {
       e.preventDefault();
-      messageDiv.textContent = 'Creating account...';
+      const status = document.getElementById("status");
+      status.textContent = "Creating account...";
 
-      const formData = new FormData(form);
-      const data = {
-        email: formData.get('email'),
-        password: formData.get('password'),
-        name: formData.get('name'),
-        role: formData.get('role'),
-        signup: true
+      const form = e.target;
+      const formData = {
+        signup: true,
+        email: form.email.value.trim(),
+        password: form.password.value.trim(),
+        name: form.name.value.trim(),
+        role: form.role.value.trim()
       };
 
       try {
-        const response = await fetch('https://corsproxy.io/?https://script.google.com/macros/s/AKfycbxXMsysVU0HbN6NaVoX1sR8ynD-nfyCeEpZ12HJ9R2hvczXAJjPo3QOROHNv9cJ_pvAqg/exec', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(data)
+        const response = await fetch(scriptURL, {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify(formData)
         });
 
         const result = await response.json();
+
         if (result.success) {
-          messageDiv.textContent = 'Signup successful! Redirecting...';
-          setTimeout(() => window.location.href = 'index.html', 1500);
+          status.textContent = "Account created successfully!";
+          form.reset();
         } else {
-          messageDiv.textContent = 'Signup failed.';
+          status.textContent = "Signup failed: " + (result.error || "Unknown error");
         }
-      } catch (error) {
-        console.error(error);
-        messageDiv.textContent = 'Signup error: ' + error.message;
+      } catch (err) {
+        console.error("Signup error:", err);
+        status.textContent = "Signup error: " + err.message;
       }
     });
   </script>
