--- a/signup.html
+++ b/signup.html
@@ -3,93 +3,115 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Create Account</title>
+  <title>Create Account – Thunder Tryouts</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 20px;
+      padding: 2rem;
+      background-color: #f2f2f2;
+    }
+    h2 {
+      color: #333;
+    }
+    form {
+      background: white;
+      padding: 1.5rem;
+      border-radius: 8px;
+      max-width: 400px;
+      margin: auto;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
     label {
       display: block;
-      margin-top: 10px;
+      margin: 1rem 0 0.3rem;
     }
-    input, select {
+    input, select, button {
       width: 100%;
-      padding: 8px;
-      margin-top: 5px;
+      padding: 0.6rem;
+      margin-bottom: 0.5rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1rem;
     }
     button {
-      margin-top: 20px;
-      padding: 10px;
-      width: 100%;
-      font-size: 16px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+    }
+    button:hover {
+      background-color: #0056b3;
+    }
+    #status {
+      margin-top: 1rem;
+      font-weight: bold;
+      color: red;
     }
   </style>
 </head>
 <body>
+
   <h2>Create Account</h2>
+
   <form id="signupForm">
-    <label>Email
-      <input type="email" name="email" required />
-    </label>
-    <label>Password
-      <input type="password" name="password" required />
-    </label>
-    <label>Name
-      <input type="text" name="name" required />
-    </label>
-    <label>Role
-      <select name="role" required>
-        <option value="">Select Role</option>
-        <option value="Parent">Parent</option>
-        <option value="Coach">Coach</option>
-        <option value="Admin">Admin</option>
-      </select>
-    </label>
+    <label for="email">Email</label>
+    <input type="email" id="email" required />
+
+    <label for="password">Password</label>
+    <input type="password" id="password" required />
+
+    <label for="name">Name</label>
+    <input type="text" id="name" required />
+
+    <label for="role">Role</label>
+    <select id="role" required>
+      <option value="">Select Role</option>
+      <option value="Parent">Parent</option>
+      <option value="Coach">Coach</option>
+      <option value="Admin">Admin</option>
+    </select>
+
     <button type="submit">Create Account</button>
+    <div id="status"></div>
   </form>
 
-  <p id="status"></p>
-
   <script>
-    const scriptURL = "https://script.google.com/macros/s/AKfycbxXMsysVU0HbN6NaVoX1sR8ynD-nfyCeEpZ12HJ9R2hvczXAJjPo3QOROHNv9cJ_pvAqg/exec"; // update to your deployed URL
+    const form = document.getElementById("signupForm");
+    const statusDiv = document.getElementById("status");
 
-    document.getElementById("signupForm").addEventListener("submit", async (e) => {
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
-      const status = document.getElementById("status");
-      status.textContent = "Creating account...";
+      statusDiv.textContent = "Creating account...";
 
-      const form = e.target;
-      const formData = {
+      const data = {
         signup: true,
-        email: form.email.value.trim(),
-        password: form.password.value.trim(),
-        name: form.name.value.trim(),
-        role: form.role.value.trim()
+        email: document.getElementById("email").value,
+        password: document.getElementById("password").value,
+        name: document.getElementById("name").value,
+        role: document.getElementById("role").value
       };
 
       try {
-        const response = await fetch(scriptURL, {
+        const response = await fetch("https://script.google.com/macros/s/AKfycbxXMsysVU0HbN6NaVoX1sR8ynD-nfyCeEpZ12HJ9R2hvczXAJjPo3QOROHNv9cJ_pvAqg/exec", {
           method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify(formData)
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(data)
         });
 
         const result = await response.json();
-
         if (result.success) {
-          status.textContent = "Account created successfully!";
-          form.reset();
+          statusDiv.style.color = "green";
+          statusDiv.textContent = "Account created successfully!";
+          // Optionally redirect or clear form
         } else {
-          status.textContent = "Signup failed: " + (result.error || "Unknown error");
+          statusDiv.style.color = "red";
+          statusDiv.textContent = "Signup failed: " + (result.error || "Unknown error");
         }
       } catch (err) {
-        console.error("Signup error:", err);
-        status.textContent = "Signup error: " + err.message;
+        statusDiv.style.color = "red";
+        statusDiv.textContent = "Signup error: " + err.message;
       }
     });
   </script>
+
 </body>
 </html>
